# spruce

./: HACKING  Makefile.am  TODO  autogen.sh  config.h.in  configure.ac  spruce-1.0.pc.in  zentimer.h
spruce/: ChangeLog  Makefile.am  search.c  search.h  spruce-cache-stream.c  spruce-cache-stream.h  spruce-cache.c  spruce-cache.h  spruce-error.h  spruce-file-utils.c  spruce-file-utils.h  spruce-folder-search.c  spruce-folder-search.h  spruce-folder-summary.c  spruce-folder-summary.h  spruce-folder.c  spruce-folder.h  spruce-list.c  spruce-list.h  spruce-lock.c  spruce-lock.h  spruce-marshal.list  spruce-offline-folder.c  spruce-offline-folder.h  spruce-offline-journal.c  spruce-offline-journal.h  spruce-offline-store.c  spruce-offline-store.h  spruce-process.c  spruce-process.h  spruce-provider.c  spruce-provider.h  spruce-sasl-anonymous.c  spruce-sasl-anonymous.h  spruce-sasl-cram-md5.c  spruce-sasl-cram-md5.h  spruce-sasl-digest-md5.c  spruce-sasl-digest-md5.h  spruce-sasl-gssapi.c  spruce-sasl-gssapi.h  (+27 more)
spruce/providers/: Makefile.am
spruce/providers/imap/: Makefile.am  spruce-imap-command.c  spruce-imap-command.h  spruce-imap-engine.c  spruce-imap-engine.h  spruce-imap-folder.c  spruce-imap-folder.h  spruce-imap-provider.c  spruce-imap-specials.c  spruce-imap-specials.h  spruce-imap-store.c  spruce-imap-store.h  spruce-imap-stream.c  spruce-imap-stream.h  spruce-imap-summary.c  spruce-imap-summary.h  spruce-imap-utils.c  spruce-imap-utils.h
spruce/providers/maildir/: Makefile.am  spruce-maildir-folder.c  spruce-maildir-folder.h  spruce-maildir-provider.c  spruce-maildir-store.c  spruce-maildir-store.h  spruce-maildir-summary.c  spruce-maildir-summary.h  spruce-maildir-utils.c  spruce-maildir-utils.h
spruce/providers/mbox/: Makefile.am  spruce-mbox-folder.c  spruce-mbox-folder.h  spruce-mbox-provider.c  spruce-mbox-store.c  spruce-mbox-store.h  spruce-mbox-summary.c  spruce-mbox-summary.h
spruce/providers/pop/: Makefile.am  spruce-pop-engine.c  spruce-pop-engine.h  spruce-pop-folder.c  spruce-pop-folder.h  spruce-pop-provider.c  spruce-pop-store.c  spruce-pop-store.h  spruce-pop-stream.c  spruce-pop-stream.h
spruce/providers/sendmail/: Makefile.am  spruce-sendmail-provider.c  spruce-sendmail-transport.c  spruce-sendmail-transport.h
spruce/providers/smtp/: Makefile.am  libsprucesmtp.urls  spruce-smtp-provider.c  spruce-smtp-transport.c  spruce-smtp-transport.h
src/: Makefile.am
src/mailx/: ChangeLog  Makefile.am  main.c  session.c  session.h
util/: Makefile.am  list.h
